--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://35.232.172.251:3306/mandatory2v2?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=pxw53pmv
